# 2048-tui

./: .gitmodules  CMakeLists.txt  README.org
src/: Board.cpp  Board.h  main.cpp
